--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="monetag" content="db5180a1a3de3adde35d2d498473ada9">
   <script type="text/javascript">
-function load()
-{
-window.open('https://www.highrevenuegate.com/dj4kyap01?key=62af3f60cda901598bf3342df990ee8c','_blank');
-window.open('https://www.highrevenuegate.com/sstd22b6?key=223890c20987bf0b1ccaebf71715b027','_blank');
-window.open('https://www.highrevenuegate.com/acfv2n6u?key=606239c55b59759fe5641e5645025ddf','_blank');
-}
+
 </script>
   <title>About Developer</title>
 
@@ -33,123 +28,18 @@ window.open('https://www.highrevenuegate.com/acfv2n6u?key=606239c55b59759fe5641e
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
-<script type='text/javascript' src='//pl19054565.highrevenuegate.com/77/7d/e3/777de31971af3097133c3fddbfefc7ff.js'></script>
-<body onload="load()">
+<body>
 
   <!--
     - #MAIN
   -->
 
   <main>
-
-    <!--
-      - #SIDEBAR
-    -->
-
-    <aside class="sidebar" data-sidebar>
-
-      <div class="sidebar-info">
-
-        <figure class="avatar-box">
-          <img src="./assets/images/logo.png" alt="Chen Schmidt" width="80">
-        </figure>
-
-        <div class="info-content">
-          <h1 class="name" title="Chen Schmidt">Chen Schmidt</h1>
-
-          <p class="title">Software developer</p>
-        </div>
-
-        <button class="info_more-btn" data-sidebar-btn>
-          <span>Show Contacts</span>
-
-          <ion-icon name="chevron-down"></ion-icon>
-        </button>
-
-      </div>
-
-      <div class="sidebar-info_more">
-
-        <div class="separator"></div>
-
-        <ul class="contacts-list">
-
-          <li class="contact-item">
-
-            <div class="icon-box">
-              <ion-icon name="mail-outline"></ion-icon>
-            </div>
-
-            <div class="contact-info">
-              <p class="contact-title">Email</p>
-
-              <a href="mailto:chenschmidt2002@gmail.comm" class="contact-link">chenschmidt2002@gmail.com</a>
-            </div>
-
-          </li>
-
-          <li class="contact-item">
-
-            <div class="icon-box">
-              <ion-icon name="location-outline"></ion-icon>
-            </div>
-
-            <div class="contact-info">
-              <p class="contact-title">Location</p>
-
-              <address>Philippines</address>
-            </div>
-
-          </li>
-
-        </ul>
-
-        <div class="separator"></div>
-
-        <ul class="social-list">
-
-          <li class="social-item">
-            <a href="https://www.facebook.com/chennschmidt/" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
-            </a>
-          </li>
-
-        </ul>
-
-      </div>
-
-    </aside>
-
-
-
-
-
     <!--
       - #main-content
     -->
 
     <div class="main-content">
-
-      <!--
-        - #NAVBAR
-      -->
-
-      <nav class="navbar">
-
-        <ul class="navbar-list">
-
-          <li class="navbar-item">
-            <button class="navbar-link  active" data-nav-link>About</button>
-          </li>
-
-        </ul>
-
-      </nav>
-
-
-
-
-
       <!--
         - #ABOUT
       -->
@@ -162,18 +52,9 @@ window.open('https://www.highrevenuegate.com/acfv2n6u?key=606239c55b59759fe5641e
 
         <section class="about-text">
           <p>
-            I'm Software Developer and Virtual Private Server Specialist from Philippines, working in Android Projects and Reverse Engineering.
+            I'm Software Developer.
           </p>
 
-          <p>
-            My job is to Create Mobile Applications and I am Currently Studying Cyber Security. I am enjoying cracking Android Games/Apps with the help of IDA or Ghidra.
-            I created CHENH4X SA-MP Launcher last 2020 and it is well known on YouTube and most of the SA-MP players are using it.
-          </p>
-          <a href="https://github.com/chenschmidt/sampmobile.github.io/raw/main/mobile/samp.apk" download="CHENH4X|V12">
-            Click me to Download CHENH4X | V12
-          </a>
-          <a href="#" onclick="window.open('https://www.highrevenuegate.com/acfv2n6u?key=606239c55b59759fe5641e5645025ddf');
-	window.open('https://www.highrevenuegate.com/sstd22b6?key=223890c20987bf0b1ccaebf71715b027');">Download CHENH4X | V12</a>
         </section>
 
 
@@ -210,10 +91,10 @@ window.open('https://www.highrevenuegate.com/acfv2n6u?key=606239c55b59759fe5641e
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Mobile apps</h4>
+                <h4 class="h4 service-item-title">Bot Development</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for Android.
+                  Develop cusom discord bots
                 </p>
               </div>
 
@@ -249,7 +130,6 @@ window.open('https://www.highrevenuegate.com/acfv2n6u?key=606239c55b59759fe5641e
   -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-<script type='text/javascript' src='//pl19055215.highrevenuegate.com/16/1b/2e/161b2e76908e075dcb50adcf13e75276.js'></script>
 </body>
 
 </html>
